<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_inicio"
            android:title="@string/nav_inicio" />
        <item
            android:id="@+id/nav_niños"
            android:icon="@drawable/ic_pareja_de_ninos"
            android:title="@string/nav_niños" />
        <item
            android:id="@+id/nav_parejas"
            android:icon="@drawable/ic_familia_de_pareja_heterosexual"
            android:title="@string/nav_parejas" />


        <item
            android:id="@+id/nav_acercade"
            android:icon="@drawable/ic_perm_device_information_black_24dp"
            android:title="@string/nav_acercade" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/nav_exit" />
    </group>



</menu>
